finished up article handlers. updated docs. added available_attributes handlers for articles and problems.
