# internal/handler/middleware/article/input.go
@@ -8,7 +8,6 @@ import (
 	"lcode/pkg/http_lib/http_helper"
 	"log/slog"
 	"net/http"
-	"strings"
 )
 
 type (
@@ -93,10 +92,9 @@ func (m *Middleware) ValidateArticleListByParamsInput(c *gin.Context) {
 		return
 	}
 
-	var categories []string
-	qCats, ok := c.GetQuery("categories")
-	if ok {
-		categories = strings.Split(qCats, ",")
+	categories, ok := c.GetQueryArray("category")
+	if !ok {
+		categories = []string{}
 	}
 
 	filter := domain.ArticleFilter{
